src/objects/SWx_Upsell_Proposal__c.object
<CustomObject>
    <fields>
        <fullName>AM_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AM Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <label>Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Digital Proposal</relationshipLabel>
        <relationshipName>SWx_Upsell_Proposals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <formula>IF( Frame_Contract__c  = NULL , NULL , Frame_Contract__r.Apttus__FF_Agreement_Number__c)</formula>
        <label>Agreement Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_name__c</fullName>
        <formula>Frame_Contract__r.Name</formula>
        <label>Agreement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analysed_Cells__c</fullName>
        <label>Analysed Cells</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Analytics_File_Refer_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Analytics File Refer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analytics_Source__c</fullName>
        <label>Analytics Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CCRE</fullName>
                </value>
                <value>
                    <fullName>CXM</fullName>
                </value>
                <value>
                    <fullName>RMP</fullName>
                </value>
                <value>
                    <fullName>DS</fullName>
                    <isActive>false</isActive>
                    <label>DS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If you don&apos;t  select a Business Line then default values will be set by the system for OIF:
-	MN - FDD LTE (BL) for CXM Digital proposal
-	GS - Care HWS (BL) for CCRE Digital Proposal.</inlineHelpText>
        <label>Business Line</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>Business Line</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Digital Proposal</relationshipLabel>
        <relationshipName>Digital_Proposal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Rules_Check__c</fullName>
        <label>Business Rules Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Grey</fullName>
                    <default>true</default>
                    <label>Grey</label>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collection_Period_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Collection Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collection_Period_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Collection Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Currency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Address__c</fullName>
        <formula>Sold_To_Party__r.BillingStreet &amp;&quot;&quot;&amp; Sold_To_Party__r.BillingCity &amp;&quot;&quot;&amp; Sold_To_Party__r.BillingState &amp;&quot;&quot;&amp;  Sold_To_Party__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_PO_needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is a PO needed for this offer? (in case of AYCE Pricing, PO is not needed)</inlineHelpText>
        <label>CPO needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DS_Portal_Display_Timestamp__c</fullName>
        <description>To store time when the Upsell stage on Digital Proposal is converted to &quot;Ready For Review&quot;.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Portal Display Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DS_Recommendation_Link__c</fullName>
        <formula>IF(  Quote_ID__c!=null , HYPERLINK(LEFT($Api.Enterprise_Server_URL_300, FIND(&apos;/services&apos;,$Api.Enterprise_Server_URL_300))+&quot;s/proposal/&quot;+Quote_ID__c +&quot;?type=swx&quot;,Quote_Name__c,&quot;_self&quot;) , $Label.DSErrorForDP)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Commercial Proposal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_Show_In_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox that clarifies whether to show Digital Proposal to Customer or not</description>
        <label>Show In Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DS_Staging__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DS Staging</label>
        <referenceTo>DS_Staging__c</referenceTo>
        <relationshipLabel>Digital Proposal</relationshipLabel>
        <relationshipName>Digital_Proposal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_System__c</fullName>
        <formula>IF( 
 ISPICKVAL(Entitlement_Info__c , &apos;Entitled&apos;), TEXT(PO__r.Delivery_System__c ) , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Generation_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Generation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entitlement_Info__c</fullName>
        <label>Entitlement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Can Be Entitled</fullName>
                </value>
                <value>
                    <fullName>Entitled</fullName>
                </value>
                <value>
                    <fullName>Quote Needed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Cannot be entitled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_LoA_Level__c</fullName>
        <inlineHelpText>SWX case is falling into LoA bypass conditions, so the Expected LoA Level is set automatically to “LoA bypass” and bypass condition to “no LoA&quot;.</inlineHelpText>
        <label>Expected LoA Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LoA_G4_Approval_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Upload__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supporting Material</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3</booleanFilter>
            <filterItems>
                <field>$Source.Account_ID__c</field>
                <operation>equals</operation>
                <valueField>File_Upload__c.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Technology__c</field>
                <operation>equals</operation>
                <valueField>File_Upload__c.Technology_Txt__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Use_Case__c</field>
                <operation>equals</operation>
                <valueField>File_Upload__c.Use_Case_Txt__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>File_Upload__c</referenceTo>
        <relationshipLabel>Digital Proposal</relationshipLabel>
        <relationshipName>Digital_Proposal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frame_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Agreement object</description>
        <label>Agreement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Sold_To_Party__c</field>
                <operation>equals</operation>
                <valueField>Apttus__APTS_Agreement__c.Apttus__Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Digital Proposal</relationshipLabel>
        <relationshipName>Digital_Proposal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frame_contract_valid_until_date__c</fullName>
        <formula>Frame_Contract__r.Apttus__Contract_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement valid until date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HandoverStatusUnsuccessful__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be updated based on related interface log status(if the interface log status is failed and make this checkbox true else false)</description>
        <inlineHelpText>Indicates if an issue occurred when Digital Market Place attempted to automatically deliver content to the delivery engine (SWMP).</inlineHelpText>
        <label>Handover Status Unsuccessful</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Identified_Cells__c</fullName>
        <label>Identified Cells</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nokia_CPO_ID__c</fullName>
        <formula>PO__r.Nokia_CPO_ID__c</formula>
        <label>Nokia CPO ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P20_Id__c</fullName>
        <label>P20_Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <formula>PO__r.Name</formula>
        <label>PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Customer Purchase Order</description>
        <label>CPO</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account_ID__c</field>
                <operation>equals</operation>
                <valueField>Apttus_Config2__CustomerPurchaseOrder__c.Apttus_Config2__AccountId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__CustomerPurchaseOrder__c</referenceTo>
        <relationshipLabel>Digital Proposal</relationshipLabel>
        <relationshipName>Digital_Proposal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_valid_until_date__c</fullName>
        <formula>PO__r.Contract_end_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPO valid until date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Recommendation_Type__c</fullName>
        <label>Proposal Recommendation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SW Recommendation</fullName>
                </value>
                <value>
                    <fullName>HW Recommendation</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposal_Status__c</fullName>
        <label>Technical Recommendation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <color>#000066</color>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Close-Validated</fullName>
                    <color>#0B6FCE</color>
                    <label>Close-Validated</label>
                </value>
                <value>
                    <fullName>Close-Reject</fullName>
                </value>
                <value>
                    <fullName>Replacement Pending</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_To_Convert_Image__c</fullName>
        <formula>IMAGE(
 CASE( TEXT(Business_Rules_Check__c ) , &apos;Red&apos;, &quot;/resource/WrongSign&quot;, &apos;Green&apos;, &quot;/resource/CorrectSign&quot;,&quot;/resource/NeutralSignC&quot;), &apos;NONE&apos;,20,20   

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ready To Convert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_to_Convert__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Please check this checkbox once Upsell line items are corrected</inlineHelpText>
        <label>Ready to Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recommendation_Type__c</fullName>
        <formula>IF(
	ISPICKVAL(Analytics_Source__c, &apos;CXM&apos;),
	&apos;NWIA&apos;,
	IF(
		ISPICKVAL(Analytics_Source__c, &apos;RMP&apos;),
		&apos;Roadmap&apos;,
		IF(
			ISPICKVAL(Analytics_Source__c, &apos;CCRE&apos;),
			&apos;CCRE&apos;,
			&apos;&apos;
		)
	)	
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recommendation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SM_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SM Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWX_Item_Can_Be_Entitled__c</fullName>
        <label>SWX Item Can Be Entitled</label>
        <summaryFilterItems>
            <field>SWx_Upsell_Items__c.Temp_Entitlement_Status__c</field>
            <operation>equals</operation>
            <value>Can Be Entitled</value>
        </summaryFilterItems>
        <summaryForeignKey>SWx_Upsell_Items__c.SWx_Upsell_Proposal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SWX_Item_Cant_Be_Entitled__c</fullName>
        <label>SWX Item Cant Be Entitled</label>
        <summaryFilterItems>
            <field>SWx_Upsell_Items__c.Temp_Entitlement_Status__c</field>
            <operation>equals</operation>
            <value>Can Not Entitled</value>
        </summaryFilterItems>
        <summaryForeignKey>SWx_Upsell_Items__c.SWx_Upsell_Proposal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SWX_Item_Entitled__c</fullName>
        <label>SWX Item Entitled</label>
        <summaryFilterItems>
            <field>SWx_Upsell_Items__c.Temp_Entitlement_Status__c</field>
            <operation>equals</operation>
            <value>Entitled</value>
        </summaryFilterItems>
        <summaryForeignKey>SWx_Upsell_Items__c.SWx_Upsell_Proposal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SWX_Item_Pending__c</fullName>
        <label>SWX Item Pending</label>
        <summaryFilterItems>
            <field>SWx_Upsell_Items__c.Temp_Entitlement_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </summaryFilterItems>
        <summaryForeignKey>SWx_Upsell_Items__c.SWx_Upsell_Proposal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SWX_Reference_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>Create Direct Sales Opportunity, Create Indirect Sales Opportunity, Read Only Direct, Read Only Indirect</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Data Loader Profile</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Digital Proposal</relationshipLabel>
        <relationshipName>Digital_Proposal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SWx_Source_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SWx Source ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scratch_Order__c</fullName>
        <formula>IF(AND(ISPICKVAL(Entitlement_Info__c ,&apos;Entitled&apos;),Delivery_System__c = &apos;Scratch Order via P20&apos; , PO__c  &lt;&gt; Null),HYPERLINK(&apos;/apex/Apttus_XApps__EditInExcelLaunch?selectedRecordId=&apos;+Id+&apos;&amp;appName=Scratch Order&amp;mode=touchless&amp;outputType=none&apos;, IMAGE(&quot;/resource/Scratch_Order&quot;,&quot;Scratch Order&quot;),&quot;_self&quot;),null)</formula>
        <label>Scratch Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Party__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sold To Party</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Digital Proposal (Sold To Party)</relationshipLabel>
        <relationshipName>Digital_Proposal</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TDD LTE</fullName>
                </value>
                <value>
                    <fullName>FDD LTE</fullName>
                </value>
                <value>
                    <fullName>WCDMA</fullName>
                </value>
                <value>
                    <fullName>HW extension</fullName>
                </value>
                <value>
                    <fullName>Antenna Systems</fullName>
                </value>
                <value>
                    <fullName>3G Core</fullName>
                </value>
                <value>
                    <fullName>IMS VoLTE Core</fullName>
                </value>
                <value>
                    <fullName>Nokia Registers</fullName>
                </value>
                <value>
                    <fullName>Core Others</fullName>
                </value>
                <value>
                    <fullName>LTE</fullName>
                    <isActive>false</isActive>
                    <label>LTE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_SWX_Items__c</fullName>
        <label>Total SWX Items</label>
        <summaryForeignKey>SWx_Upsell_Items__c.SWx_Upsell_Proposal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unweighted_Value__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Unweighted Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upsell_Status__c</fullName>
        <label>Upsell Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Ready For Review</fullName>
                </value>
                <value>
                    <fullName>Ready To Convert</fullName>
                </value>
                <value>
                    <fullName>Convert</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <label>Use Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Energy Efficiency</fullName>
                </value>
                <value>
                    <fullName>eNB User Capacity</fullName>
                </value>
                <value>
                    <fullName>Load Balancing</fullName>
                </value>
                <value>
                    <fullName>Air interface UL</fullName>
                </value>
                <value>
                    <fullName>Air interface DL</fullName>
                </value>
                <value>
                    <fullName>VoLTE</fullName>
                </value>
                <value>
                    <fullName>Transport / security</fullName>
                </value>
                <value>
                    <fullName>LTE Evolution</fullName>
                </value>
                <value>
                    <fullName>IoT</fullName>
                </value>
                <value>
                    <fullName>Spectrum Use</fullName>
                </value>
                <value>
                    <fullName>WCDMA Voice Quality</fullName>
                </value>
                <value>
                    <fullName>WBTS Capacity</fullName>
                </value>
                <value>
                    <fullName>RNC Capacity</fullName>
                </value>
                <value>
                    <fullName>Coverage</fullName>
                </value>
                <value>
                    <fullName>Load Balancing &amp; Interworking</fullName>
                </value>
                <value>
                    <fullName>3G Core Benchmark – Network Overview</fullName>
                </value>
                <value>
                    <fullName>MSS &amp; MGW Capacity</fullName>
                </value>
                <value>
                    <fullName>MSS &amp; MGW Performance</fullName>
                </value>
                <value>
                    <fullName>3G Core Voice Quality</fullName>
                </value>
                <value>
                    <fullName>3G Core Service Enablers</fullName>
                </value>
                <value>
                    <fullName>IMS VoLTE Core Benchmark – Network Overview</fullName>
                </value>
                <value>
                    <fullName>CFX-5000 &amp; TAS Capacity</fullName>
                </value>
                <value>
                    <fullName>CFX-5000 &amp; TAS Performance</fullName>
                </value>
                <value>
                    <fullName>Voice Interworking Performance</fullName>
                </value>
                <value>
                    <fullName>IMS VoLTE Core Service Enablers</fullName>
                </value>
                <value>
                    <fullName>NT-HLR Capacity</fullName>
                </value>
                <value>
                    <fullName>HSS Capacity</fullName>
                </value>
                <value>
                    <fullName>One-NDS Capacity</fullName>
                </value>
                <value>
                    <fullName>NTAS Dev Ops</fullName>
                </value>
                <value>
                    <fullName>Network overview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Webservice_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webservice Creation</label>
        <type>Checkbox</type>
    </fields>
    <label>Digital Proposal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_ID__c</columns>
        <columns>Upsell_Status__c</columns>
        <columns>Analytics_File_Refer_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Analytics_Source__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Recommendations</fullName>
        <columns>NAME</columns>
        <columns>Analytics_File_Refer_ID__c</columns>
        <columns>Creation_Date__c</columns>
        <columns>Proposal_Status__c</columns>
        <columns>Proposal_Recommendation_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Upsell_Status__c</field>
            <operation>notEqual</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>DS_Show_In_Portal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Recommendations</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Care_Contract_Renewals</fullName>
        <columns>NAME</columns>
        <columns>Account_ID__c</columns>
        <columns>Upsell_Status__c</columns>
        <columns>Proposal_Recommendation_Type__c</columns>
        <columns>Unweighted_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Proposal_Recommendation_Type__c</field>
            <operation>equals</operation>
            <value>Renewal</value>
        </filters>
        <label>Care Contract Renewals</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DP_Customer_Accepted_Recommendations</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Analytics_File_Refer_ID__c</columns>
        <columns>Creation_Date__c</columns>
        <columns>Proposal_Status__c</columns>
        <columns>Proposal_Recommendation_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Upsell_Status__c</field>
            <operation>equals</operation>
            <value>Ready To Convert,Convert</value>
        </filters>
        <filters>
            <field>Proposal_Status__c</field>
            <operation>equals</operation>
            <value>Validated,Close-Validated</value>
        </filters>
        <filters>
            <field>DS_Show_In_Portal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Validated Recommendations</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DP_Customer_For_your_action</fullName>
        <columns>NAME</columns>
        <columns>Analytics_File_Refer_ID__c</columns>
        <columns>Creation_Date__c</columns>
        <columns>Proposal_Status__c</columns>
        <columns>Proposal_Recommendation_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Upsell_Status__c</field>
            <operation>equals</operation>
            <value>Ready For Review</value>
        </filters>
        <filters>
            <field>Proposal_Status__c</field>
            <operation>equals</operation>
            <value>Active,Replacement Pending</value>
        </filters>
        <filters>
            <field>DS_Show_In_Portal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>For Your Review</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DP_Customer_Rejected</fullName>
        <columns>NAME</columns>
        <columns>Analytics_File_Refer_ID__c</columns>
        <columns>Creation_Date__c</columns>
        <columns>Proposal_Status__c</columns>
        <columns>Proposal_Recommendation_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Upsell_Status__c</field>
            <operation>equals</operation>
            <value>Ready To Convert,Convert,Cancel,Reject,Replace</value>
        </filters>
        <filters>
            <field>Proposal_Status__c</field>
            <operation>equals</operation>
            <value>Replaced,Validated,Reject,Close-Validated,Close-Reject,Cancel</value>
        </filters>
        <filters>
            <field>DS_Show_In_Portal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Closed Recommendations</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>In_Cancelled_Stage</fullName>
        <columns>NAME</columns>
        <columns>Account_ID__c</columns>
        <columns>Upsell_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Upsell_Status__c</field>
            <operation>equals</operation>
            <value>Cancel</value>
        </filters>
        <label>In Cancelled Stage</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>